clusters/apps/arr/radarr/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: arr-stack
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: radarr
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\kompose\kompose.exe convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: radarr
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
          image: lscr.io/linuxserver/radarr:latest
          name: radarr
          ports:
            - containerPort: 7878
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/localtime
              name: radarr-claim0
              readOnly: true
            - mountPath: /config
              name: radarr-claim1
            - mountPath: /data
              name: radarr-claim2
      restartPolicy: Always
      volumes:
        - name: radarr-claim0
          persistentVolumeClaim:
            claimName: radarr-claim0
            readOnly: true
        - name: radarr-claim1
          persistentVolumeClaim:
            claimName: radarr-claim1
        - name: radarr-claim2
          persistentVolumeClaim:
            claimName: radarr-claim2
