clusters/apps/arr/radarr/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: arr-stack
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: radarr
  name: radarr
spec:
  ports:
    - name: "7878"
      port: 7878
      targetPort: 7878
  selector:
    io.kompose.service: radarr
