clusters/apps/arr/radarr/radarr-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: arr-stack
  name: radarr-route
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure 
  routes:
    - kind: Rule
      match: Host(`radarr.local.wololoaeyoyo.com`)
      services:
        - name: radarr 
          port: 7878
  tls:
    secretName: local-wololoaeyoyo-com-tls
